# crud-sample-backend-cdk-serverless

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  ruff.toml
cdk/: package-lock.json  package.json
cdk/lib/: app.ts  auth-stack.ts  cloudfront-stack.ts  infra.ts
src/: app.py  handler.py  main.py  requirements.txt
src/auth/: handler.py
src/core/: auth.py  config.py  security.py
src/dependencies/: auth.py
src/di/: container.py
src/domains/interfaces/: task_repository.py
src/domains/models/: task.py  user.py
src/domains/service/: task_service.py
src/exceptions/: errors.py
src/infrastructure/repositories/: task_repository.py
src/repositories/: interfaces.py  task_repository.py
src/routers/: README.md  task.py  users.py
src/routers/dto/: task.py
src/schemas/: task.py
src/services/: task_service.py
src/usecase/: task_handler.py
tests/domains/models/: test_task.py
tests/infrastructure/repositories/: test_task_repository.py
tests/repositories/: test_task_repository.py
tests/repositories/service/: test_task_service.py
tests/routes/: test_task.py
tests/usecase/: test_task_handler.py
