[tool.poetry]
name = "crud-sample-backend-cdk-serverless"
version = "0.1.0"
description = ""
authors = ["fujioka"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
jwt = "^1.3.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
