[tool.poetry]
name = "crud-sample-backend-cdk-serverless"
version = "0.1.0"
description = ""
authors = ["fujioka"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
jwt = "^1.3.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pydantic = "^2.11.5"
aws-lambda-powertools = "^3.13.0"
injector = "^0.22.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"
boto3 = "^1.38.28"
botocore = "^1.38.28"
pytest = "^8.4.0"
moto = "^5.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
